--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 		<div class="p">
 			<div class="h">6. Contact Us / Report Violation</div>
 			<br>
-			<b>If you have any questions or suggestions with respect to this Privacy Policy or our privacy system, or if you want to report any violations of this Privacy Policy or abuse of the application, service or website, please contact us at:</b> <a href="polaris.view99@gmail.com">polaris.view99@gmail.com</a>
+			<b>If you have any questions or suggestions with respect to this Privacy Policy or our privacy system, or if you want to report any violations of this Privacy Policy or abuse of the application, service or website, please contact us at:</b> <a href="wonderpic.lab@gmail.com">wonderpic.lab@gmail.com</a>
 		</div>
 
 		<div class="p">
